--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,1 +1,27 @@
-<p>product-detail works!</p>
+<!-- <div class="product-detail">
+  <h2>{{ product.name }}</h2>
+  <p>Price: {{ product.price | currency }}</p>
+  <p>Quantity: {{ product.quantity }}</p>
+  <p>Inserted Amount: {{ insertedAmount | currency }}</p>
+  <button (click)="buyProduct()">Buy</button>
+</div>
+ -->
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-8 col-12">
+      <div class="card">
+        <div class="card-body">
+          <h2>{{ product.name }}</h2>
+          <p class="card-text">
+            Price: {{ product.price | currency : "USD" : "symbol" : "1.2-2" }}
+          </p>
+          <p class="card-text">Quantity: {{ product.quantity }}</p>
+          <button class="btn btn-primary" (click)="buyProduct()">Buy</button>
+          <a [routerLink]="['/product-list']" class="btn btn-link float-end"
+            >Back to Product List</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
