--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,1 +1,27 @@
-<p>product-list works!</p>
+<!-- product-list.component.html -->
+<!-- <div class="product-list">
+  <h2>Product List</h2>
+  <ul>
+    <li *ngFor="let product of products" (click)="selectProduct(product.id)">
+      {{ product.name }} - ${{ product.price }}
+    </li>
+  </ul>
+</div> -->
+<div class="card" [ngStyle]="{ height: '80vh', overflowY: 'auto' }">
+  <div class="card-body">
+    <div *ngFor="let product of products" class="card mb-3">
+      <div class="card-body">
+        <h5 class="card-title">{{ product.name }}</h5>
+        <p class="card-text">
+          Price: {{ product.price | currency : "USD" : "symbol" : "1.2-2" }}
+        </p>
+        <p class="card-text">Quantity: {{ product.quantity }}</p>
+        <a
+          [routerLink]="['/product-detail', product.id]"
+          class="btn btn-primary"
+          >View Details</a
+        >
+      </div>
+    </div>
+  </div>
+</div>
