--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,11 +1,3 @@
-<!-- <div class="product-detail">
-  <h2>{{ product.name }}</h2>
-  <p>Price: {{ product.price | currency }}</p>
-  <p>Quantity: {{ product.quantity }}</p>
-  <p>Inserted Amount: {{ insertedAmount | currency }}</p>
-  <button (click)="buyProduct()">Buy</button>
-</div>
- -->
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-8 col-12">
@@ -18,8 +10,8 @@
           <p class="card-text">Quantity: {{ product.quantity }}</p>
           <button class="btn btn-primary" (click)="buyProduct()">Buy</button>
           <a [routerLink]="['/product-list']" class="btn btn-link float-end"
-            >Back to Product List</a
-          >
+            ><i class="bi bi-arrow-right-square-fill"></i
+          ></a>
         </div>
       </div>
     </div>
