--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,14 +1,11 @@
 <div class="list-container">
-  <div *ngFor="let product of products" class="card mb-3 shadow">
-    <div class="card-body">
-      <h5 class="card-title">{{ product.name }}</h5>
-      <p class="card-text">
-        Price: {{ product.price | currency : "USD" }} | Quantity:
-        {{ product.quantity }}
-      </p>
-      <a [routerLink]="['/product-detail', product.id]" class="btn btn-primary"
-        >Select</a
-      >
-    </div>
-  </div>
+  <app-product-card *ngFor="let product of products" [product]="product">
+    <button
+      selectButton
+      class="btn btn-primary"
+      (click)="selectProduct(product.id)"
+    >
+      Select
+    </button>
+  </app-product-card>
 </div>
