--- a/src/app/shared/product-card/product-card.component.html
+++ b/src/app/shared/product-card/product-card.component.html
@@ -1,1 +1,11 @@
-<p>product-card works!</p>
+<div class="card mb-3 shadow">
+  <div class="card-body">
+    <h5 class="card-title">{{ product.name }}</h5>
+    <p class="card-text">
+      Price: {{ product.price }} | Quantity: {{ product.quantity }}
+    </p>
+    <ng-content select="[selectButton]"></ng-content>
+    <ng-content select="[deleteButton]"></ng-content>
+    <ng-content select="[updateButton]"></ng-content>
+  </div>
+</div>
