Add shared product-form compoent. Add error component. Add unit test on some components and services. Update routing module.

--- a/src/app/components/product-detail/product-detail.component.html
+++ b/src/app/components/product-detail/product-detail.component.html
@@ -1,19 +1,15 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-8 col-12">
-      <div class="card">
-        <div class="card-body">
-          <h2>{{ product.name }}</h2>
-          <p class="card-text">
-            Price: {{ product.price | currency : "USD" : "symbol" : "1.2-2" }}
-          </p>
-          <p class="card-text">Quantity: {{ product.quantity }}</p>
-          <button class="btn btn-primary" (click)="buyProduct()">Buy</button>
-          <a [routerLink]="['/product-list']" class="btn btn-link float-end"
-            ><i class="bi bi-arrow-left-square-fill"></i
-          ></a>
-        </div>
-      </div>
+      <app-product-card [product]="product">
+        <button buyButton class="btn btn-primary" (click)="buyProduct()">
+          Buy
+        </button>
+
+        <a backButton class="float-end mt-1" [routerLink]="['/product-list']">
+          <i class="bi bi-backspace-fill"></i>
+        </a>
+      </app-product-card>
     </div>
   </div>
 </div>
