--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,5 @@
 <div class="list-container">
+  <h2 class="text-center">Select Product</h2>
   <app-product-card *ngFor="let product of products" [product]="product">
     <button
       selectButton
