--- a/src/app/components/vending-machine/vending-machine.component.html
+++ b/src/app/components/vending-machine/vending-machine.component.html
@@ -18,6 +18,12 @@
     <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(1)">
       Insert $1
     </button>
+    <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(5)">
+      Insert $5
+    </button>
+    <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(10)">
+      Insert $10
+    </button>
 
     <br />
     <button class="btn btn-danger w-100 mb-3" (click)="reset()">Reset</button>
