--- a/src/app/modules/admin/components/product-add/product-add.component.html
+++ b/src/app/modules/admin/components/product-add/product-add.component.html
@@ -13,4 +13,8 @@
     [submitButtonText]="'Add'"
     (formSubmit)="onSubmit($event)"
   ></app-product-form>
+
+  <div *ngIf="errorMessage" class="alert alert-danger mt-3">
+    {{ errorMessage }}
+  </div>
 </div>
