--- a/src/app/shared/product-card/product-card.component.html
+++ b/src/app/shared/product-card/product-card.component.html
@@ -2,10 +2,13 @@
   <div class="card-body">
     <h5 class="card-title">{{ product.name }}</h5>
     <p class="card-text">
-      Price: {{ product.price }} | Quantity: {{ product.quantity }}
+      Price: {{ product.price | currency : "USD" }} | Quantity:
+      {{ product.quantity }}
     </p>
     <ng-content select="[selectButton]"></ng-content>
     <ng-content select="[deleteButton]"></ng-content>
     <ng-content select="[updateButton]"></ng-content>
+    <ng-content select="[buyButton]"></ng-content>
+    <ng-content select="[backButton]"></ng-content>
   </div>
 </div>
