--- a/src/app/shared/product-form/product-form.component.html
+++ b/src/app/shared/product-form/product-form.component.html
@@ -9,7 +9,7 @@
       "
       class="text-danger"
     >
-      Invalid name: only letters are allowed
+      {{ errorMessages.NAME_INVALID }}
     </div>
   </div>
   <div class="form-group mb-3">
@@ -27,7 +27,7 @@
       "
       class="text-danger"
     >
-      Invalid price: must be between 0.01 and 10.00 with two decimal places
+      {{ errorMessages.PRICE_INVALID }}
     </div>
   </div>
   <div class="form-group mb-3">
@@ -45,7 +45,7 @@
       "
       class="text-danger"
     >
-      Invalid quantity: must be between 1 and 10
+      {{ errorMessages.QUANTITY_INVALID }}
     </div>
   </div>
   <button
