--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,5 +1,5 @@
+<h2 class="text-center mb-5">Select Product</h2>
 <div class="list-container">
-  <h2 class="text-center">Select Product</h2>
   <app-product-card *ngFor="let product of products" [product]="product">
     <button
       selectButton
