--- a/src/app/components/vending-machine/vending-machine.component.html
+++ b/src/app/components/vending-machine/vending-machine.component.html
@@ -1,10 +1,10 @@
 <div class="card mb-3">
   <div class="card-body">
     <h2 class="font-weight-bold text-center">Vending Machine</h2>
-    <div class="text-center mb-3">
+    <p class="text-center mb-3">
       Inserted Amount:
       {{ insertedAmount | currency : "USD" }}
-    </div>
+    </p>
 
     <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(0.1)">
       Insert $0.10
