--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,13 +1,15 @@
 <!-- src/app/admin/admin.component.html -->
 <div class="container">
-  <h2>Admin Panel</h2>
-  <button class="btn btn-primary m-2" (click)="navigateToAddProduct()">
-    Add Product
-  </button>
-  <a [routerLink]="['/product-list']" class="float-end"
-    >Back to product ordering</a
-  >
-  <div class="container mt-5">
+  <h2 class="text-center">Admin Panel</h2>
+  <div class="d-flex justify-content-between">
+    <button class="btn btn-primary m-2" (click)="navigateToAddProduct()">
+      Add Product
+    </button>
+    <a class="mt-3" [routerLink]="['/product-list']"
+      >Back to product ordering</a
+    >
+  </div>
+  <div class="container mt-4">
     <router-outlet></router-outlet>
   </div>
 
