--- a/src/app/components/vending-machine/vending-machine.component.html
+++ b/src/app/components/vending-machine/vending-machine.component.html
@@ -6,24 +6,11 @@
       {{ insertedAmount | currency : "USD" }}
     </p>
 
-    <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(0.1)">
-      Insert $0.10
-    </button>
-    <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(0.25)">
-      Insert $0.25
-    </button>
-    <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(0.5)">
-      Insert $0.50
-    </button>
-    <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(1)">
-      Insert $1
-    </button>
-    <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(5)">
-      Insert $5
-    </button>
-    <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(10)">
-      Insert $10
-    </button>
+    <ng-container *ngFor="let coin of acceptedCoins">
+      <button class="btn btn-primary w-100 mb-3" (click)="insertCoin(coin)">
+        Insert ${{ coin }}
+      </button>
+    </ng-container>
 
     <br />
     <button class="btn btn-danger w-100 mb-3" (click)="reset()">Reset</button>
